unpackaged/main/default/objects/Contact/fields/OrderApi__Work_Do_Not_Call__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Work_Do_Not_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do Not Call the Contact&#39;s Work Phone.</description>
    <inlineHelpText>Do Not Call the Contact&#39;s Work Phone.</inlineHelpText>
    <label>Work Do Not Call</label>
    <type>Checkbox</type>
</CustomField>