unpackaged/main/default/objects/Contact/fields/OrderApi__Work_Email__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Work_Email__c</fullName>
    <description>Work/Business Email for the Contact.</description>
    <inlineHelpText>Work/Business Email for the Contact.</inlineHelpText>
    <label>Work Email</label>
    <type>Email</type>
</CustomField>