unpackaged/main/default/objects/Contact/fields/OrderApi__Work_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Work_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contact will not receive communications to their Work Email.</description>
    <inlineHelpText>Contact will not receive communications to their Work Email.</inlineHelpText>
    <label>Work Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>