unpackaged/main/default/objects/Contact/fields/OrderApi__Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Work_Phone__c</fullName>
    <description>The Work Phone for the Contact.</description>
    <inlineHelpText>The Work Phone for the Contact.</inlineHelpText>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>