unpackaged/main/default/objects/Contact/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <description>Org name summited by user when requesting system access.</description>
    <inlineHelpText>Org name summited by user when requesting system access.</inlineHelpText>
    <label>Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>