unpackaged/main/default/objects/Contact/fields/Organization_Type__c.field-meta.xml
<CustomField>
    <fullName>Organization_Type__c</fullName>
    <label>Organization Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Credit Union</fullName>
            </value>
            <value>
                <fullName>Savings Bank</fullName>
            </value>
            <value>
                <fullName>Savings &amp; Loan Association</fullName>
            </value>
            <value>
                <fullName>Industrial or Cooperative Bank</fullName>
            </value>
            <value>
                <fullName>Financial Service Company</fullName>
            </value>
            <value>
                <fullName>Federal Reserve Bank</fullName>
            </value>
            <value>
                <fullName>Vendor Banking</fullName>
            </value>
            <value>
                <fullName>Trust Company</fullName>
            </value>
            <value>
                <fullName>Clearing House</fullName>
            </value>
            <value>
                <fullName>Federal Home Loan Bank</fullName>
            </value>
            <value>
                <fullName>Non-Banking Institution</fullName>
            </value>
            <value>
                <fullName>Holding Company</fullName>
            </value>
            <value>
                <fullName>Corporate Credit Union</fullName>
            </value>
            <value>
                <fullName>Banker&#39;s Bank</fullName>
            </value>
            <value>
                <fullName>Financial Industry Trade Association</fullName>
            </value>
            <value>
                <fullName>Regional Payments Association</fullName>
            </value>
            <value>
                <fullName>Financial Industry Service Provider</fullName>
            </value>
            <value>
                <fullName>Law Firm</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>