unpackaged/main/default/objects/Contact/fields/OwnerID__c.field-meta.xml
<CustomField>
    <fullName>OwnerID__c</fullName>
    <formula>CASESAFEID(OwnerId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerID</label>
    <type>Text</type>
</CustomField>