unpackaged/main/default/objects/Contact/fields/PagesApi__Cookie_Usage_Accepted__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Cookie_Usage_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Contact has accepted the Cookie Usage Prompt and will not be prompted again.</description>
    <inlineHelpText>When checked, the Contact has accepted the Cookie Usage Prompt and will not be prompted again.</inlineHelpText>
    <label>Cookie Usage Accepted</label>
    <type>Checkbox</type>
</CustomField>