unpackaged/main/default/objects/Contact/fields/PagesApi__Site__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select the Site you wish to use as the default Site for the Contact.</description>
    <inlineHelpText>Select the Site you wish to use as the default Site for the Contact.</inlineHelpText>
    <label>Site</label>
    <referenceTo>PagesApi__Site__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>