unpackaged/main/default/objects/Contact/fields/Partner_External_Provider__c.field-meta.xml
<CustomField>
    <fullName>Partner_External_Provider__c</fullName>
    <label>Partner/External Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>External Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>