unpackaged/main/default/objects/Contact/fields/Primary_RTN__c.field-meta.xml
<CustomField>
    <fullName>Primary_RTN__c</fullName>
    <inlineHelpText>RTN summited by user when requesting system access.</inlineHelpText>
    <label>Primary RTN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>