unpackaged/main/default/objects/Contact/fields/Private_Adj_List_Email__c.field-meta.xml
<CustomField>
    <fullName>Private_Adj_List_Email__c</fullName>
    <description>Email to appear in Escalation Contacts Directory</description>
    <label>Directory Email Address</label>
    <type>Email</type>
</CustomField>