unpackaged/main/default/objects/Contact/fields/Private_Adj_List_fax__c.field-meta.xml
<CustomField>
    <fullName>Private_Adj_List_fax__c</fullName>
    <description>Fax # to appear in Escalation Contacts Directory</description>
    <label>Fax Number</label>
    <type>Phone</type>
</CustomField>