unpackaged/main/default/objects/Contact/fields/Private_Adj_List_Notes__c.field-meta.xml
<CustomField>
    <fullName>Private_Adj_List_Notes__c</fullName>
    <description>Notes to appear in Escalation Contacts Directory</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>