unpackaged/main/default/objects/Contact/fields/Private_Adj_List_Phone__c.field-meta.xml
<CustomField>
    <fullName>Private_Adj_List_Phone__c</fullName>
    <description>Phone Number to appear in Escalation Contacts Directory</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>