unpackaged/main/default/objects/Contact/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Colleague</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Relative</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>