unpackaged/main/default/objects/Contact/fields/Resident__c.field-meta.xml
<CustomField>
    <fullName>Resident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resident</label>
    <type>Checkbox</type>
</CustomField>