unpackaged/main/default/objects/Contact/fields/Retired__c.field-meta.xml
<CustomField>
    <fullName>Retired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, contact is retired</description>
    <inlineHelpText>If checked, contact is retired</inlineHelpText>
    <label>Retired</label>
    <type>Checkbox</type>
</CustomField>