unpackaged/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>This field is used in the Membership Application Form</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Professor</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>