unpackaged/main/default/objects/Contact/fields/RPA__c.field-meta.xml
<CustomField>
    <fullName>RPA__c</fullName>
    <label>RPA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ePay</fullName>
            </value>
            <value>
                <fullName>EPCOR</fullName>
            </value>
            <value>
                <fullName>FNBB</fullName>
            </value>
            <value>
                <fullName>MACHA</fullName>
            </value>
            <value>
                <fullName>NEACH</fullName>
            </value>
            <value>
                <fullName>PaymentsFirst</fullName>
            </value>
            <value>
                <fullName>SFE</fullName>
            </value>
            <value>
                <fullName>TCHPA</fullName>
            </value>
            <value>
                <fullName>UBB</fullName>
            </value>
            <value>
                <fullName>UMACHA</fullName>
            </value>
            <value>
                <fullName>WesPay</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>