unpackaged/main/default/objects/Contact/fields/Rules_Access_Requested__c.field-meta.xml
<CustomField>
    <fullName>Rules_Access_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enabled upon form submission. Manually disabled.</description>
    <label>System Access Requested</label>
    <type>Checkbox</type>
</CustomField>