unpackaged/main/default/objects/Contact/fields/Save_the_Whales_Donation_Levels__c.field-meta.xml
<CustomField>
    <fullName>Save_the_Whales_Donation_Levels__c</fullName>
    <label>Save the Whales Donation Levels</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>