unpackaged/main/default/objects/Contact/fields/Semi_Annual_Recap_Participant__c.field-meta.xml
<CustomField>
    <fullName>Semi_Annual_Recap_Participant__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Member wants to be invited to ECCHO Semi-Annual Recap Events</inlineHelpText>
    <label>Semi-Annual Recap Participant</label>
    <type>Checkbox</type>
</CustomField>