unpackaged/main/default/objects/Contact/fields/Sent_Audit_Email__c.field-meta.xml
<CustomField>
    <fullName>Sent_Audit_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent Audit Email</label>
    <type>Checkbox</type>
</CustomField>