unpackaged/main/default/objects/Contact/fields/SF_CONTACT__c.field-meta.xml
<CustomField>
    <fullName>SF_CONTACT__c</fullName>
    <label>SF_CONTACT</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>