unpackaged/main/default/objects/Contact/fields/Site_Network_ID__c.field-meta.xml
<CustomField>
    <fullName>Site_Network_ID__c</fullName>
    <description>** System Calculated ** Merges the community network id for the site.</description>
    <formula>PagesApi__Site__r.PagesApi__Community_Network_ID__c</formula>
    <inlineHelpText>** System Calculated ** Merges the community network id for the site.</inlineHelpText>
    <label>Site Network ID</label>
    <type>Text</type>
</CustomField>