unpackaged/main/default/objects/Contact/fields/SM_OPS_Designee__c.field-meta.xml
<CustomField>
    <fullName>SM_OPS_Designee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SO requested this person be invited to an ECCHO OPS meeting</description>
    <inlineHelpText>SO requested this person be invited to an ECCHO OPS meeting</inlineHelpText>
    <label>SM OPS Designee</label>
    <type>Checkbox</type>
</CustomField>