unpackaged/main/default/objects/Contact/fields/Submitted_Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Organization_Name__c</fullName>
    <description>This is a the org that a prospect or member of the public submits - it cannot be directly tied to an account - that will need to be manual</description>
    <label>Submitted Organization Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>