unpackaged/main/default/objects/Contact/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <label>Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ET</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
            </value>
            <value>
                <fullName>MT</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>HT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>