unpackaged/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OrderApi__Work_Email__c</columns>
    <columns>OrderApi__Is_Primary_Contact__c</columns>
    <columns>FON_Is_Primary_Billing_Contact__c</columns>
    <columns>FON_Is_Billing_Contact__c</columns>
    <columns>FON_Is_Main_Business_Committee_Contact__c</columns>
    <columns>FON_Is_Business_Committee_Alternate__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>