unpackaged/main/default/objects/Contact/listViews/Members.listView-meta.xml
<ListView>
    <fullName>Members</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.TITLE</field>
        <operation>notEqual</operation>
    </filters>
    <label>Members</label>
</ListView>