unpackaged/main/default/objects/Contact/listViews/New_Contacts_Of_Lead_Type.listView-meta.xml
<ListView>
    <fullName>New_Contacts_Of_Lead_Type</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Lead__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Account.FON_Account_Name__c</field>
        <operation>equals</operation>
        <value>Holding Account</value>
    </filters>
    <label>New Leads</label>
</ListView>